<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:widget="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorFragment"
    tools:context="com.namecardsnearby.NavigationDrawerFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/container_with_dotted_border_user_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/dotted_border">

            <ImageButton
                android:id="@+id/user_photo_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:scaleType="centerCrop"
                android:src="@drawable/usericon" />

            <ImageView
                android:id="@+id/genderIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="start"
                android:padding="1dp" />

        </FrameLayout>

        <EditText
            android:id="@+id/user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/container_with_dotted_border_user_photo"
            android:layout_toEndOf="@+id/container_with_dotted_border_user_photo"
            android:layout_toRightOf="@+id/container_with_dotted_border_user_photo"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp" />

        <com.kylewbanks.android.iconedittext.IconEditText
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_with_dotted_border_user_photo"
            android:layout_marginTop="10dp"
            android:inputType="phone"
            widget:hint="@string/phone"
            widget:iconSrc="@drawable/phone"
            widget:isPassword="false" />

        <com.kylewbanks.android.iconedittext.IconEditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_phone"
            android:inputType="textEmailAddress"
            widget:hint="@string/email"
            widget:iconSrc="@drawable/emailicon"
            widget:isPassword="false" />

        <com.kylewbanks.android.iconedittext.IconEditText
            android:id="@+id/facebook_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_address"
            android:inputType="textUri"
            widget:hint="@string/facebook"
            widget:iconSrc="@drawable/facebookicon"
            widget:isPassword="false" />

        <com.kylewbanks.android.iconedittext.IconEditText
            android:id="@+id/instagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/facebook_account"
            android:inputType="textUri"
            widget:hint="@string/instagram"
            widget:iconSrc="@drawable/instagram"
            widget:isPassword="false" />

        <com.kylewbanks.android.iconedittext.IconEditText
            android:id="@+id/website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/instagram"
            android:inputType="textUri"
            widget:hint="@string/website"
            widget:iconSrc="@drawable/link"
            widget:isPassword="false" />

        <ImageView
            android:id="@+id/about_me_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/website"
            android:src="@drawable/about_me" />

        <FrameLayout
            android:id="@+id/container_with_dotted_border_resume"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/website"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/about_me_icon"
            android:layout_toRightOf="@+id/about_me_icon"
            android:background="@drawable/dotted_border">

            <EditText
                android:id="@+id/about_me"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorFragment"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/about_me"
                android:inputType="textMultiLine"
                android:padding="2dp" />
        </FrameLayout>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/container_with_dotted_border_resume"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/account"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/divider1"
            android:text="@string/account"
            android:visibility="gone"/>

        <Button
            android:id="@+id/update_profile"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/account"
            android:text="@string/update_profile"/>
            <!--android:visibility="gone"/>-->

        <Button
            android:id="@+id/logout"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/logout"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/update_profile" />


    </RelativeLayout>

</ScrollView>